# dominant_color

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
