[package]
name = "dominant_color"
version = "0.2.4"
authors = ["Marek Michalik <marekmichalik43@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Simple image color extractor written in Rust with no external dependencies"
categories = ["algorithms", "multimedia::images"]

repository = "https://github.com/marekm4/dominant_color"
readme = "README.md"

[dev-dependencies.image]
version = "0.23.0"
default-features = false
features = ["jpeg"]